# Animation-Lab

./: .gitignore  CMakeLists.txt  CanadianExperienceApp.cpp  CanadianExperienceApp.h  Doxyfile.doxy  README.md  RGrewal_Movie_Submission.anim  pch.h
CanadianExperienceLib/: Actor.cpp  Actor.h  AnimChannel.cpp  AnimChannel.h  AnimChannelAngle.cpp  AnimChannelAngle.h  AnimChannelPoint.cpp  AnimChannelPoint.h  CMakeLists.txt  Drawable.cpp  Drawable.h  FrankFactory.cpp  FrankFactory.h  HaroldFactory.cpp  HaroldFactory.h  HeadTop.cpp  HeadTop.h  ImageDrawable.cpp  ImageDrawable.h  LaboratoryDrawable.cpp  LaboratoryDrawable.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PolyDrawable.cpp  PolyDrawable.h  RotatedBitmap.cpp  RotatedBitmap.h  SpartyFactory.cpp  SpartyFactory.h  Timeline.cpp  Timeline.h  TimelineDlg.cpp  TimelineDlg.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  (+2 more)
LaboratoryDemo/: CMakeLists.txt  LaboratoryIsolator.h  README.md  main.cpp  pch.h
LaboratoryLib/: CMakeLists.txt  Cable.cpp  Cable.h  CableFactory.cpp  CableFactory.h  Component.cpp  Component.h  DistributionPanel.cpp  DistributionPanel.h  ElectricWinch.cpp  ElectricWinch.h  Endpoint.cpp  Endpoint.h  Equipment.cpp  Equipment.h  EquipmentRack.cpp  EquipmentRack.h  Event.cpp  Event.h  GraphicsHelper.cpp  GraphicsHelper.h  Laboratory.cpp  Laboratory.h  Laboratory1Factory.cpp  Laboratory1Factory.h  Laboratory2Factory.cpp  Laboratory2Factory.h  LaboratoryActual.cpp  LaboratoryActual.h  LaboratoryDialog.cpp  LaboratoryDialog.h  LaboratoryFactory.cpp  LaboratoryFactory.h  LaboratoryStandin.cpp  LaboratoryStandin.h  Light.cpp  Light.h  MotionSink.cpp  MotionSink.h  MotionSource.cpp  (+26 more)
LaboratoryLib/include/: laboratory-api.h
LaboratoryLib/resources/scripts/: laboratory2.xml
LaboratoryTests/: CMakeLists.txt  ComponentTest.cpp  LaboratoryTest.cpp  SwitchTest.cpp  WorkingLaboratoryTest.cpp  ZPMTest.cpp
Tests/: ActorTest.cpp  AnimChannelAngleTest.cpp  CMakeLists.txt  DrawableTest.cpp  ImageDrawableTest.cpp  PictureObserverTest.cpp  PictureTest.cpp  PolyDrawableTest.cpp  TimelineTest.cpp
html/: _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _anim_channel_8cpp.html  _anim_channel_8h.html  _anim_channel_8h_source.html  _anim_channel_angle_8cpp.html  _anim_channel_angle_8h.html  _anim_channel_angle_8h_source.html  _anim_channel_point_8cpp.html  _anim_channel_point_8h.html  _anim_channel_point_8h_source.html  _cable_8cpp.html  _cable_8cpp.js  _cable_8h.html  _cable_8h_source.html  _cable_factory_8cpp.html  _cable_factory_8h.html  _cable_factory_8h_source.html  _canadian_experience_app_8cpp.html  _component_8cpp.html  (+408 more)
(+81 files in other folders)
